--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,11 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "ngTimepickerNoDep": "*",
+    "font-awesome": "^4.5.0",
+    "angular-money-directive": "^1.2.5",
+    "angular-google-places-autocomplete": "^0.2.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -22,6 +26,12 @@
         "less/bootstrap.less",
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
+      ]
+    },
+    "ngTimepickerNoDep": {
+      "main": [
+        "src/js/ngTimepicker.js",
+        "src/css/ngTimepicker.css"
       ]
     }
   }
