--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "ngTimepickerNoDep": "*",
     "font-awesome": "^4.5.0",
     "angular-money-directive": "^1.2.5",
-    "angular-google-places-autocomplete": "^0.2.7"
+    "angular-google-places-autocomplete": "^0.2.7",
+    "angular-counter": "^1.0.5",
+    "ng-clustered-map": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -32,6 +34,11 @@
       "main": [
         "src/js/ngTimepicker.js",
         "src/css/ngTimepicker.css"
+      ]
+    },
+    "ng-clustered-map":{
+      "main":[
+        "dist/ng-clustered-map.js"
       ]
     }
   }
