--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-money-directive": "^1.2.5",
     "angular-google-places-autocomplete": "^0.2.7",
     "moment": "~2.11.2",
-    "angular-counter": "^1.0.5"
+    "angular-counter": "^1.0.5",
+    "roboto-fontface": "~0.4.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
