--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "angular-google-places-autocomplete": "^0.2.7",
     "moment": "~2.11.2",
     "angular-counter": "^1.0.5",
-    "roboto-fontface": "~0.4.5"
+    "roboto-fontface": "~0.4.5",
+    "c3": "~0.4.10",
+    "d3": "~3.5.16"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -47,6 +49,7 @@
     "angular": "^1.4.0",
     "angular-animate": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "d3": "<=3.5.0"
   }
 }
