--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-counter": "^1.0.5",
     "roboto-fontface": "~0.4.5",
     "c3": "~0.4.10",
-    "d3": "~3.5.16"
+    "d3": "~3.5.16",
+    "lodash": "~4.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
